--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>turns</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<!DOCTYPE html>
+<html lang=en>
+
+	<head>
+		<meta charset=UTF-8>
+		<meta name=viewport content="width=device-width, initial-scale=1.0">
+		<title>turns</title>
+		<link rel=stylesheet href=/src/style.css>
+		<script type=module src=/src/main.ts></script>
+	</head>
+
+	<body>
+		<svg id=main viewBox="0 0 1 1"></svg>
+	</body>
 </html>
