--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang=en>
+
 	<head>
 		<meta charset=UTF-8>
 		<meta name=viewport content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,20 @@
 		<link rel=stylesheet href=/src/style.css>
 		<script type=module src=/src/main.ts></script>
 	</head>
+
 	<body>
 		<svg id=main viewBox="0 0 1 1"></svg>
+		<div id=device-unsupported>
+			Your device doesn't meet the system requirements to play this game.
+			<ul>
+				<li id=webgpu-unsupported>
+					Your browser doesn't support webgpu. <a href=https://web.dev/blog/webgpu-supported-major-browsers#browser_and_os_availability>View supported
+						devices</a>.
+				</li>
+				<li id=touch-unsupported>
+					No touchscreen detected. Your device needs a touchscreen to work with turns.
+				</li>
+			</ul>
+		</div>
 	</body>
 </html>
