Prevent aspect ratio of the SVG

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<svg id=main viewBox="0 0 1 1"></svg>
+		<svg id=main></svg>
 		<div id=device-unsupported>
 			Your device doesn't meet the system requirements to play this game.
 			<ul>
@@ -19,7 +19,7 @@
 						devices</a>.
 				</li>
 				<li id=touch-unsupported>
-					No touchscreen detected. Your device needs a touchscreen to work with turns.
+					No touchscreen detected.
 				</li>
 			</ul>
 		</div>
